--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl" : "src",
+    "paths" : {
+      "@components/*" : ["./app/components/*"],
+      "@models/*"     : ["./app/models/*"],
+      "@mocks/*"      : ["./app/mocks/*"]
+    },
   }
 }
